# ctm-toolkit

./: .env.example  .gitignore  Dockerfile  README.md  build_pdf.py  docker-compose.yml  preview.py  pyproject.toml  report_builder.py  requirements.txt
.claude/: brainstorm-resume.md
data/: mock_patient_detail.json  sample_match.json
data/mock/: mm-matches.json  other_matches.json  pt-data.json  similar_patients.json
data/raw/: amc_trials_raw.xml  pt_template.xlsx  sparrow_trials_raw.xlsx  west_trial_template.xlsx
docs/superpowers/plans/: 2026-06-23-real-data-pipeline.md
docs/superpowers/specs/: 2026-06-17-ctm-pipeline-design.md  2026-06-23-real-data-pipeline-design.md  2026-07-13-fixture-driven-report-design.md  2026-07-13-single-report-path-consolidation.md
output/: report.html
scripts/: make_template.py
src/ctm/: cli.py  ctml_cli.py  meta_cli.py  mm_cli.py  pipeline.py  report_cli.py  trials_lifecycle.py
src/ctm/db/: store.py
src/ctm/fetchers/: fetch_similar_patients.py
src/ctm/reports/: builder.py
src/ctm/transformers/: amc_xml_to_raw.py  confidence_split.py  eligibility_to_ctml.py  excel_reader.py  oncotree_mapping.py  process_ct_data.py  process_patient_general.py  process_patient_genetic.py  raw_amc_to_ctml.py  raw_ctgov_to_ctml.py  raw_sparrow_to_ctml.py  raw_west_to_ctml.py  (+4 more)
static/: report.css
templates/: _other_matches.html  _patient_detail.html  _primary_match.html  _similar_patients.html  report.html
tests/: conftest.py  test_builder.py  test_confidence_split.py  test_fetchers.py  test_fixture_shapes.py  test_mm_cli_trials_pipeline.py  test_pipeline.py  test_raw_models.py  test_report_from_fixtures.py  test_schemas.py  test_store.py  test_transformers.py  test_trials_curate.py  test_trials_lifecycle.py
tests/fixtures/: mm_export_7439568.json  test-matches-v0.0.1.json  test-pts-v0.0.1.json  test-trials-v0.0.1.json
(+13 files in other folders)
