[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctm-toolkit"
version = "0.1.1"
description = "Clinical trial data normalization and report generation toolkit for MatchMiner integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Dane Deemer", email = "deemer@umich.edu" }
]
keywords = ["clinical-trials", "matchminer", "oncology", "ctml", "normalization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "openpyxl",
    "jinja2",
]

[project.optional-dependencies]
report = [
    "weasyprint",
]
preview = [
    "weasyprint",
    "livereload",
]
all = [
    "weasyprint",
    "livereload",
]

[project.scripts]
ctm-mm = "ctm.mm_cli:main"
ctm-report = "ctm.report_cli:main"
ctm-fetch = "ctm.fetch_cli:main"
ctm-meta = "ctm.meta_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
